# pulsar-desktop

./: .gitignore  BUG-HUNT-2-2026-06-15.md  BUG-HUNT-2026-06-15.md  BUG-HUNT-3-2026-06-16.md  BUG-HUNT-4-2026-06-16.md  BUG-HUNT-5-2026-06-16.md  BUG-HUNT-6-2026-06-16.md  BUG-HUNT-7-2026-06-16.md  BUGHUNT-ROUND8-REPORT.md  CLAUDE.md  Cargo.toml  OVERNIGHT-REPORT.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest-setup.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/pulsar-capture/: Cargo.toml
crates/pulsar-capture/src/: dxgi.rs  encode.rs  lib.rs  rtp.rs  wgc.rs  window.rs
crates/pulsar-capture/src/dxgi/: cursor.rs  cursor_shape.rs  device.rs  pacing.rs  platform.rs
crates/pulsar-capture/src/encode/: d3d.rs  encoder.rs  new.rs  nvenc.rs  submit.rs
crates/pulsar-core/: Cargo.toml
crates/pulsar-core/examples/: btn_watch.rs  drag_repro.rs  loopback_test.rs
crates/pulsar-core/src/: audio.rs  capture.rs  config.rs  connection.rs  crypto.rs  discovery.rs  input.rs  lib.rs  media.rs  pipeline.rs  service.rs
crates/pulsar-core/src/audio/: command.rs  loopback.rs  mute.rs  process_loopback.rs  settings.rs  sink.rs  sink_unix.rs
crates/pulsar-core/src/connection/: handlers.rs  node.rs  session.rs  types.rs
crates/pulsar-core/src/input/: desktop_stub.rs  hub.rs  macos.rs  touchpad_linux.rs  types.rs  uinput.rs  vigem.rs  window_win.rs  windows.rs
crates/pulsar-core/src/pipeline/: command.rs  gst.rs  tests.rs  types.rs
crates/pulsar-core/src/service/: auth.rs  client.rs  host.rs  media.rs  wire.rs
crates/pulsar-core/tests/: auth_race.rs  auth_service.rs  data_service.rs  disconnect.rs  e2e.rs  games_service.rs  input_service.rs  kbdhook_smoke.rs  streaming.rs
crates/pulsar-render/: Cargo.toml
crates/pulsar-render/lang/: en.json  tr.json
crates/pulsar-render/src/: decode.rs  desktop.rs  i18n.rs  linux.rs  main.rs  overlay.rs  video.rs
crates/pulsar-render/src/stream/: mod.rs  rtp.rs
crates/pulsar-render/src/win/: decode.rs  egui_paint.rs  mod.rs  present.rs
crates/pulsar-render/testdata/: README.md  test.av1.ivf  test.h264  test.h265
crates/pulsar-setup/: Cargo.toml  build.rs
crates/pulsar-setup/src/: install.rs  main.rs
crates/vigem-client/: Cargo.toml
crates/vigem-client/src/: bus.rs  ds4.rs
scripts/: bump-version.mjs  fetch-drivers.mjs  fetch-ffmpeg.mjs  fetch-player.mjs  gap-analysis.workflow.js  gen-update-manifest.mjs  gen-update-manifest.test.mjs  impl-mobile.workflow.js  mpvprobe.py  pulsar-vidsink.c  rkegl.c  synthcombo.py  wiggle.py
scripts/pi/: README-kms-zerocopy.md  gst-rockchip-kms-zerocopy.patch
src/: app.css  app.html  vitest.d.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lang/: en.json  tr.json
src-tauri/src/: audio_io.rs  auth.rs  avatar.rs  caps.rs  commands.rs  connections.rs  controllers.rs  display_mode.rs  events.rs  files.rs  files_window.rs  fs_browse.rs  host.rs  i18n.rs  io_cmds.rs  job.rs  kbdhook.rs  lib.rs  main.rs  native_view.rs  play.rs  process.rs  relay_mode.rs  render.rs  render_stats.rs  session_cmds.rs  state.rs  util.rs  viewer.rs
src-tauri/src/host/: cursor.rs  handlers.rs
src-tauri/src/kbdhook/: imp.rs  linux.rs
src-tauri/src/kbdhook/imp/: keymap.rs
src-tauri/src/native_view/: ipc.rs  mpvgl.rs  spawn.rs
src-tauri/src/play/: hold.rs
src/lib/: Controllers.svelte  Controllers.test.ts  Icon.svelte  Modal.svelte  PulsarMark.svelte  acKeepalive.ts  api.commands.ts  api.dom.ts  api.events.ts  api.invoke.ts  api.test.ts  api.ts  api.types.ts  caps.svelte.ts  connectTarget.test.ts  connectTarget.ts  gamepadNav.svelte.ts  games.svelte.ts  games.test.ts  h264.ts  i18n.catalogs.ts  i18n.en.ts  i18n.svelte.ts  i18n.test.ts  i18n.tr.ts  i18n.types.ts  keymap.ts  opus-audio.ts  overlayModals.svelte.ts  peers.svelte.ts  peers.test.ts  portal.ts  settings.svelte.ts  settings.test.ts  theme.svelte.ts  types.ts  update.svelte.ts  updater.test.ts  updater.ts
src/lib/i18n/: en.json  kk.json  ru.json  tr.json
src/lib/screens/: Approve.svelte  Connecting.svelte  Connections.svelte  Devices.svelte  FilesWindow.svelte  Games.svelte  Home.svelte  Home.test.ts  HostChat.svelte  Session.svelte  Settings.svelte  Settings.test.ts
src/lib/screens/Games/: FolderScan.svelte  GameForm.svelte
src/lib/screens/Gaming/: ConnectModal.svelte  GamesScreen.svelte  GamingHome.svelte  InputAssign.svelte  Numpad.svelte  PaneGameConnect.svelte
src/lib/screens/Home/: LanDevices.svelte  SelfCard.svelte
src/lib/screens/Session/: Chat.svelte  Files.svelte  Files.test.ts  Menu.svelte  Overlay.svelte  SessionActions.svelte  StatsPanel.svelte  VideoControls.svelte  VideoMenu.svelte  VideoStatus.svelte  controls.svelte.ts  input.svelte.ts  media.svelte.ts  sidechannels.svelte.ts  ui.svelte.ts
src/lib/screens/Settings/: DisplayTab.svelte  GeneralTab.svelte  NetworkTab.svelte  SecurityTab.svelte
src/routes/: +layout.ts  +page.svelte  page.test.ts
src/routes/page/: BottomDock.svelte  Chrome.svelte  GamingShell.svelte  HomeView.svelte  PasswordModal.svelte  Sidebar.svelte  SplitPicker.svelte  Tabs.svelte  UpdateModal.svelte  sessions.svelte.ts  sessions.test.ts
