# Pulsar desktop — Rust workspace (Windows / macOS / Linux app).
#
# The desktop Tauri app plus its native helpers. The shared engine now lives in
# its own repo and is consumed as a git dependency:
#   pulsar-core  → github.com/PulsarDesk/pulsar-core   (client/host/streaming engine)
#   pulsar-proto → github.com/PulsarDesk/pulsar-proto  (wire protocol)
#   pulsar-relay → github.com/PulsarDesk/relay         (the same binary can double as a relay)
[workspace]
resolver = "2"
members = [
  "crates/pulsar-render",
  "crates/pulsar-capture",
  "src-tauri",
]
# `cargo test` / `cargo build` default to the light, cross-platform capture crate.
# The Tauri app (wry/webkit/gtk/ffmpeg/SDL) is built with `-p pulsar-tauri`; the
# native renderer with `-p pulsar-render`.
default-members = ["crates/pulsar-capture"]

[workspace.package]
version = "0.1.0-dev.27"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Pulsar contributors"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
bincode = "1.3"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "sync"] }
socket2 = { version = "0.5", features = ["all"] }
whoami = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x25519-dalek = "2"
chacha20poly1305 = "0.10"
sha2 = "0.10"
gilrs = "0.10"
# Shared crates, now external repos (git dependencies).
pulsar-core = { git = "https://github.com/PulsarDesk/pulsar-core" }
pulsar-proto = { git = "https://github.com/PulsarDesk/pulsar-proto" }
pulsar-relay = { git = "https://github.com/PulsarDesk/relay" }

# pulsar-core uses the vendored vigem-client fork on Windows (DS4 EXTENDED report).
# The fork lives in the pulsar-core repo; patch crates.io to it so the ViGEmBus
# gamepad path resolves the same way it did in the monorepo.
[patch.crates-io]
vigem-client = { git = "https://github.com/PulsarDesk/pulsar-core" }
