[package]
name = "pulsar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pulsar desktop core — connection orchestration (P2P + relay fallback), E2E crypto, controller input, and the streaming pipeline. Consumed by the Tauri app."

[dependencies]
pulsar-proto.workspace = true
tokio.workspace = true
socket2.workspace = true
# Enumerate every local IPv4 interface so LAN discovery joins/sends the multicast group
# on ALL real NICs — a multi-homed host (Ethernet + WiFi) can receive a peer's beacon on
# a different NIC than its default route, so a single-interface join silently misses peers.
if-addrs = "0.13"
whoami.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
x25519-dalek = { workspace = true, features = ["static_secrets"] }
chacha20poly1305.workspace = true
sha2.workspace = true
gilrs.workspace = true

# Host-side virtual gamepad injection on Linux (uinput) + Wayland screen capture
# via the XDG ScreenCast desktop portal (x11grab can't see a Wayland desktop).
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
libc = "0.2"

# Host-side mouse + keyboard injection on Windows via the Win32 SendInput API.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }
# Host-side virtual gamepad on Windows: emulates an Xbox 360 pad through the
# ViGEmBus driver (pure-Rust client; the driver itself is bundled like Interception).
vigem-client = "0.1"
# Core Audio (IAudioEndpointVolume) for muting the host's local output while
# streaming; the higher-level `windows` crate gives the COM methods windows-sys lacks.
windows = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	# IMMDevice::Activate is gated on both of these (its PROPVARIANT param).
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "time", "net", "sync"] }
pulsar-relay = { path = "../../../relay" }

# Diagnostic-only: the kbdhook_smoke test probes whether WH_KEYBOARD_LL fires here.
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
] }
