# Pulsar Setup — branded Windows installer (Discord-style bootstrapper, NOT a wizard).
#
# One small exe: brand visuals + a progress bar. The app payload (pulsar.exe +
# resources) is EMBEDDED as a zip at build time (`PULSAR_SETUP_PAYLOAD` env →
# build.rs → include_bytes!), so the installer works fully offline. It installs
# per-user to %LOCALAPPDATA%\Programs\Pulsar (no UAC), writes the HKCU uninstall
# registry entry + Start-Menu/Desktop shortcuts, copies itself as the uninstaller,
# and launches the app. `--uninstall` reverses all of it; `/S`/`--silent` installs
# headlessly (updater / scripted installs).
#
# The kernel drivers (Interception/ViGEmBus) are NOT installed here — they need
# admin + reboot. The app itself elevates at runtime (request_admin) and the
# driver payloads ship in resources/, so hosting still gets them; a client-only
# user never pays the UAC prompt.
[package]
name = "pulsar-setup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "pulsar-setup"
path = "src/main.rs"

[dependencies]
# Same eframe the render overlay uses (0.29) → shared workspace build cache.
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_System_Registry",
	"Win32_Security",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
